--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,10 @@
     </head>
     <body>
         <include src="./partials/header-home.html"></include>
+        <include src="./partials/loader.html"></include>
         <include src="./partials/main-home.html"></include>
         <include src="./partials/footer.html"></include>
+        <include src="./partials/modal-developer.html"></include>
         <script type="module" src="./index.js"></script>
     </body>
 </html>
