--- a/src/my-library.html
+++ b/src/my-library.html
@@ -19,6 +19,8 @@
         <include src="./partials/header-my-library.html"></include>
         <include src="./partials/main-my-library.html"></include>
         <include src="./partials/footer.html"></include>
+        <include src="./partials/loader.html"></include>
+        <include src="./partials/modal-developer.html"></include>
         <script type="module" src="./my-library.js"></script>
     </body>
 </html>
